setup css file fonts images

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,11 @@
         <meta name="description" content="Practical test for 'Principal studio'">
         <meta name="author" content="">
         <title>Principal studio</title>
+        <link rel='stylesheet' type="text/css" href='/style.css' />
     </head>
 
     <body>
-        <h1 class="test">Pointer et non griffer les orteils</h1>
+        <h1 id="test">Pointer et non griffer les orteils</h1>
+        <img src="/images/branding.png" alt="">
     </body>
 </html>
