--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,11 @@
         <meta name="author" content="">
         <title>Principal studio</title>
         <link rel='stylesheet' type="text/css" href='/style.css' />
+        <script src="/main.js"></script>
     </head>
 
     <body>
-        <h1 id="test">Pointer et non griffer les orteils</h1>
+        <h1 class="test">Pointer et non griffer les orteils</h1>
         <img src="/images/branding.png" alt="">
     </body>
 </html>
