--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,79 @@
     </head>
 
     <body>
-        <h1 class="test">Pointer et non griffer les orteils</h1>
-        <img src="/images/branding.png" alt="">
+        <header class="banner">
+            <div class="navbar-container">
+                <div class="brand-wrapper">
+                    <a class="brand" href="#">
+                        <img src="/images/branding.png">
+                    </a>
+                </div>
+                <div class="desktop-menu">
+                    <nav class="nav-container">
+                        <ul class="items-list">
+                            <li class="menu-item">
+                                <a href="#">À propos</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">Réalisations</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">Formation</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">Adhésion</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">Coordonnées</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="burger-container">
+                    <div id="nav-icon">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+                <div class="switcker">
+                    <span>fr</span>
+                    <span>/</span>
+                    <span>en</span>
+                </div>
+            </div>
+        </header>
+        <div class="main">
+            <h1>Pointer et non griffer les orteils</h1>
+            <p>Apprendre à allonger les orteils en les pointant sans les recroqueviller en petites griffes, donc à bien pointer, peut sembler d’importance secondaire, mais j’espère vous convaincre de l’intérêt d’y porter une attention particulière.</p>
+            <p>Les pieds contiennent de nombreux muscles, dont les plus petits et les plus profonds sont les muscles « intrinsèques ». Lorsque ceux-ci manquent de tonus, les muscles superficiels des pieds et des bas de jambes doivent compenser, et le déséquilibre musculaire qui en résulte crée une série de problèmes, incluant un manque de stabilité sur demi-pointe et un risque accrue d’ampoules sur pointes. Par ailleurs, du point de vue esthétique, un pied dont les orteils pointent en longueur prolonge la courbe du cou-de-pied et contribue à visuellement allonger la jambe.</p>
+            <p>Il est certain qu’au fil du temps et grâce à un travail consciencieux, les exercices de la classe de danse contribuent à renforcer les petits muscles intrinsèques des pieds. Ceci dit, on atteindra des résultats plus rapidement en effectuant des exercices d’éveil et de renforcement.</p>
+            <p>Assis ou debout, le poids bien réparti sur les trois points d’appui des pieds (1er métatarse, 5e métatarse et talon) : lever les gros orteils en maintenant les quatre autres bien longs au sol; reposer les gros orteils; lever les quatre autres doigts de pied en maintenant les gros orteils au sol; reposer. Répéter ces échanges une vingtaine de fois, au rythme de 2-3 secondes par mouvement.</p>
+            <p>Sur le même rythme que l’exercice précédent, lever un seul orteil à la fois, du plus gros au plus petit; puis vice-versa, et de manière aléatoire.</p>
+            <p>Au début, il est souvent difficile d’isoler les muscles permettant d’effectuer ces actions. On peut aider à solliciter les bons muscles en plaçant les mains sur les doigts de pied qui doivent demeurer inactifs. La patience et la persévérance permettront éventuellement « d’échanger » et de « pianoter » les orteils avec aisance.</p>
+            <p>Debout ou assis, le poids bien réparti sur les trois points d’appui des pieds et les chevilles alignées (sans pronation ni supination), activer les muscles sous les arches de pieds pour augmenter légèrement la « voûte » des arches. Maintenir les doigts de pied bien longs au sol en effectuant cette action. Maintenir chaque voûte 3 à 10 secondes, et effectuer une douzaine de répétitions.</p>
+            <p>Un autre excellent exercice consiste à placer un ballon un peu mou, d’environ 6 pouces de diamètre, contre le mur. On se tient devant, un talon au sol, la cheville fléchie et les orteils sur le ballon en demi-pointe. L’exercice consiste à pointer les orteils en poussant dans le ballon. Effectuer une vingtaine de répétitions, à un rythme de 2-3 secondes par mouvement.</p>
+            <p>Tous ces exercices seront idéalement pratiqués au moins trois fois par semaine. Par contre, avant de les faire seul, on les fera sous la supervision du professeur pour s’assurer de bien les exécuter.</p>
+        </div>
+        <div class="sidebar">
+            <div class="sidebar-container">
+                <div class="image-wrapper">
+                    <img src="/images/image.png" alt="">
+                </div>
+                <h2>Dominique Turcotte</h2>
+                <h2 class="subtitle">Programme classique</h2>
+                <p>Dominique est membre fondatrice du Réseau d’enseignement de la danse. Coauteure du programme RED pour l’enseignement de la danse classique, elle enseigne occasionnellement lors de ses stages de développement professionnel. Elle est également membre du comité pédagogique aviseur du RED et contribue régulièrement à son blogue et à ses divers comités.</p>
+                <button>Voir le site</button>
+            </div>
+        </div>
+        <footer class="footer">
+            <div class="footer-container">
+                <div class="image-wrapper">
+                    <img src="/images/Fill 1.png" alt="">
+                </div>
+                <p>Réseau d’enseignement<br>de la dance</p>
+            </div>
+        </footer>
     </body>
 </html>
