CSS layout with gird

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
         <script src="/main.js"></script>
     </head>
 
-    <body>
-        <header class="banner">
+    <body class="grid-container">
+        <header class="banner container">
             <div class="navbar-container">
                 <div class="brand-wrapper">
                     <a class="brand" href="#">
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </header>
-        <div class="main">
+        <div class="main container">
             <h1>Pointer et non griffer les orteils</h1>
             <p>Apprendre à allonger les orteils en les pointant sans les recroqueviller en petites griffes, donc à bien pointer, peut sembler d’importance secondaire, mais j’espère vous convaincre de l’intérêt d’y porter une attention particulière.</p>
             <p>Les pieds contiennent de nombreux muscles, dont les plus petits et les plus profonds sont les muscles « intrinsèques ». Lorsque ceux-ci manquent de tonus, les muscles superficiels des pieds et des bas de jambes doivent compenser, et le déséquilibre musculaire qui en résulte crée une série de problèmes, incluant un manque de stabilité sur demi-pointe et un risque accrue d’ampoules sur pointes. Par ailleurs, du point de vue esthétique, un pied dont les orteils pointent en longueur prolonge la courbe du cou-de-pied et contribue à visuellement allonger la jambe.</p>
@@ -66,7 +66,7 @@
             <p>Un autre excellent exercice consiste à placer un ballon un peu mou, d’environ 6 pouces de diamètre, contre le mur. On se tient devant, un talon au sol, la cheville fléchie et les orteils sur le ballon en demi-pointe. L’exercice consiste à pointer les orteils en poussant dans le ballon. Effectuer une vingtaine de répétitions, à un rythme de 2-3 secondes par mouvement.</p>
             <p>Tous ces exercices seront idéalement pratiqués au moins trois fois par semaine. Par contre, avant de les faire seul, on les fera sous la supervision du professeur pour s’assurer de bien les exécuter.</p>
         </div>
-        <div class="sidebar">
+        <div class="sidebar container">
             <div class="sidebar-container">
                 <div class="image-wrapper">
                     <img src="/images/image.png" alt="">
@@ -77,7 +77,7 @@
                 <button>Voir le site</button>
             </div>
         </div>
-        <footer class="footer">
+        <footer class="footer container">
             <div class="footer-container">
                 <div class="image-wrapper">
                     <img src="/images/Fill 1.png" alt="">
