--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
                     </a>
                 </div>
                 <div class="burger-container">
-                    <div id="nav-icon" class="open">
+                    <div id="nav-icon" class="">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -27,7 +27,7 @@
                     </div>
                 </div>
             </div>
-            <div class="navbar-container open">
+            <div class="navbar-container">
                     <nav class="nav-container container">
                         <ul class="items-list">
                             <li class="menu-item">
