--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,6 @@
         <meta name="author" content="">
         <title>Principal studio</title>
         <link rel='stylesheet' type="text/css" href='/style.css' />
-        <script src="/main.js"></script>
     </head>
 
     <body class="grid-container">
@@ -29,7 +28,7 @@
             </div>
             <div class="navbar-container">
                     <nav class="nav-container container">
-                        <ul class="items-list">
+                        <ul id="nav" class="items-list">
                             <li class="menu-item">
                                 <a href="#">À propos</a>
                             </li>
@@ -84,5 +83,6 @@
                 <p>Réseau d’enseignement<br>de la dance</p>
             </div>
         </footer>
+        <script src="/main.js"></script>
     </body>
 </html>
